# Korzo-vonalzo

./: .gitignore  CMakeLists.txt  README.md  Skeleton.cpp  readme.md
src/: Skeleton.cpp
